# llmcord

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  main.py  pyproject.toml
.github/workflows/: run-tests.yml
app/: database.py  discord_client.py  llm_client.py  message_store.py  models.py  utils.py
config/: config.py
tests/: conftest.py
tests/integration/: test_discord_client.py  test_llm_client.py  test_send_llm_response.py
tests/unit/: test_commands.py  test_config.py  test_database.py  test_message_store.py  test_models.py  test_utils.py
